# ivp-asignaciones-financieras-v2

./: .gitignore  000_metodo_numerico_corrector.py  pyproject.toml
src/: 000_revision_cargas_trabajo.ipynb  010_metodo_numerico_corrector.py  100_cargas_trabajo.ipynb  200_anexo_3_gema.ipynb  300_calculadora_avance.ipynb  400_requerimiento_recursos.ipynb
src/data/cabanaconde/: cabanaconde_cronograma_anual.pkl
src/data/callacalla/: callacalla_cronograma_anual.pkl
src/data/canocota/: canocota_cronograma_anual.pkl
src/data/ccanaseta/: ccanaseta_cronograma_anual.pkl
src/data/general_data/: actividades.json
src/data/misanayoc/: misanayoc_cronograma_anual.pkl
src/data/sibayo/: sibayo_cargas_trabajo.pkl  sibayo_cronograma_anual.pkl
