[project]
name = "asignaciones-financieras-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "excel2img>=1.4.0",
    "firebase-admin>=6.8.0",
    "google-cloud-firestore>=2.20.2",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "notebook>=7.4.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "reportlab>=4.4.1",
    "scipy>=1.16.0",
    "xhtml2pdf>=0.2.17",
    "xlsxwriter>=3.2.3",
]
